test/fail/integration/_fail_sem_expr_intdiv_2.hs
x :: Int
x = 4 div "hello"
main = print "hello"